tests/NormalTests/paczka2/big_fuzzy/13077636.err
Error in line 20: 7bR A643 35,0
Error in line 10: 3F1hqXA5 A458 1,7
Error in line 21: 7bR A458 48,6
Error in line 33: 3K373pWk A521 93,2
Error in line 30: senb A643 25,0
Error in line 40: 3F1hqXA5 A456 18,2
Error in line 50: DsBvS2fRHrI A521 96,0
Error in line 57: DsBvS2fRHrI A456 84,4
Error in line 44: A521 A456 82,7
Error in line 54: 7bR A643 8,7
Error in line 62: A521 A521 88,3
Error in line 75: A521 A458 36,4
Error in line 80: 3F1hqXA5 A458 197,8
Error in line 93: DsBvS2fRHrI A521 57,5
Error in line 96: DsBvS2fRHrI A458 99,9
Error in line 113: 7bR A521 -2,6
Error in line 104: 3F1hqXA5 A456 28,4
Error in line 123: 3K373pWk A521 -1,0
Error in line 130: senb A458 12,1
Error in line 134: senb A456 32,2
Error in line 128: DsBvS2fRHrI A456 87,0
Error in line 118: 3K373pWk A521 50,9
Error in line 167: 3F1hqXA5 A456 58,7
Error in line 173: A521 A521 -3,8
Error in line 171: DsBvS2fRHrI A643 21,4
Error in line 180: 3K373pWk A521 96,6
Error in line 184: DsBvS2fRHrI A458 66,7
Error in line 188: 3F1hqXA5 A521 30,4
Error in line 155: A521 A521 44,8
Error in line 185: DsBvS2fRHrI A456 77,8
Error in line 195: senb A456 86,4
Error in line 163: 7bR A521 80,8
Error in line 203: 3K373pWk A643 16,9
Error in line 206: A521 A521 30,9
Error in line 215: 3K373pWk A458 38,5
Error in line 232: 3F1hqXA5 A458 -2,4
Error in line 236: A521 A456 88,5
Error in line 244: DsBvS2fRHrI A521 2,2
